--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,5 +5,5 @@ build_script:
   - cmd: >-
       SET PATH=%PATH%;%PYTHON%\Scripts\
       pip install pipenv
-      pipenv install --dev"
-      pipenv run typebarrier-tests"
+      pipenv install --dev
+      pipenv run typebarrier-tests
