--- a/Pipfile
+++ b/Pipfile
@@ -19,3 +19,4 @@ flake8-import-order = '*'
 mypy                = '*'
 pep8-naming         = '*'
 pytest              = '*'
+pytest-benchmark    = '*'
